# graphica

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  environment.yml  linx_dev_env.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-pip.yml
conda/: meta.yaml
git_hooks/: pre-commit
graphica/: __init__.py  _version.py  bayesian_network.py  conditional_probability_table.py  data.py  directed_acyclic_graph.py  ds.py  errors.py  factor.py  factor_one.py  factors.py  infer.py  log_factor.py  log_factor_adapter.py  markov_network.py  misc.py  null_graphviz_dag.py  query.py  variable_elimination.py
inference/: metropolis_hastings.py
linx/: bayesian_network.py  conditional_probability_table.py  data.py  directed_acyclic_graph.py  ds.py  errors.py  factor.py  factors.py  infer.py  log_factor.py  markov_network.py  misc.py  query.py  variable_elimination.py
tests/: bayesian_network_test.py  beta_test.py  binomial_test.py  conditional_probability_table_test.py  conftest.py  constant_test.py  covid_safe_test.py  dag_test.py  debug_bayesian_network_test.py  default_transition_test.py  deterministic_test.py  directed_acyclic_graph.py  directed_acyclic_graph_test.py  factor_test.py  factors_test.py  gamma_test.py  hiring_test.py  log_factor_test.py  markov_network_test.py  metropolis_hastings_logistic_test.py  metropolis_hastings_test.py  normal_test.py  particle_acceptance_test.py  perturb_methods_test.py  query_test.py  random_variable_test.py  variable_elimination_heuristics_test.py  variable_elimination_test.py
(+52 files in other folders)
